<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rsc.formulario.MainActivity">
    <!--android:orientation="vertical"-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/layLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:textColorHint="@color/colorSecondaryText"
            android:textColorHighlight="@color/colorAccent"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:capitalize="words"
            />
    </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/fechaNac"
            android:theme="@style/FechaNac"/>

        <DatePicker
           android:id="@+id/dpFecha"
           android:layout_width="match_parent"
           android:layout_height="200dp"
           android:datePickerMode="spinner"
           android:spinnersShown="true"
           android:calendarViewShown="false">

       </DatePicker>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:textColorHint="@color/colorSecondaryText"
            android:textColorHighlight="@color/colorAccent"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:maxLength="10"
            android:inputType="phone"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:textColorHint="@color/colorSecondaryText"
            android:textColorHighlight="@color/colorAccent"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:inputType="textEmailAddress"

            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:textColorHint="@color/colorSecondaryText"
            android:textColorHighlight="@color/colorAccent"
            android:maxLines="10"
            android:maxLength="200"
            android:scrollHorizontally="false"
            android:capitalize="sentences"
            />
    </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:theme="@style/BotonSiguiente"
            />
        <!--android:onClick="siguiente"/>-->
    </LinearLayout>
</ScrollView>




</RelativeLayout>




